--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "gitignore": "^0.7.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20",
     "underscore": "^1.13.6"
